--- a/index.html
+++ b/index.html
@@ -1,14 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First-Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+
+<body class="roboto-normal">
+    <header>
+        <nav>
+            <h2 class="header-logo">LOGO</h2>
+            <ul>
+                 <li><button class="btn">Sign Up</button></li>
+            </ul>
+        </nav>
+        <section class="banner-section">
+            <h1 class="banner-title">Cool Dark UI Template for <br> Webflow Agencies!</h1>
+            <button class="btn">Stay Focused</button>
+        </section>
+    </header>
+    <main>
+        <!-- action-section -->
+        <section class="action-section">
+            <div class="action-contenar">
+                <div class="action-contant">
+                    <h3 class="action-title">See It in Action</h3>
+                    <h4 class="action-p">Explore the live preview and imagine your <br> brand in this bold new look.
+                    </h4>
+                    <button class="btn">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img class="action-img" src="Assets/wc-mini.png" alt="">
+                </div>
+            </div>
+        </section>
+
+         <!-- Productive Users Section -->
+        <section class="productive_user-section">
+            <h1 class="productive-heading">Joined Thousands of Productive Users</h1>
+
+            <div class="productive-contenar">
+                <div class="productive-contant">
+                    <h1 class="content-title">50K</h1>
+                    <h5 class="contant-p">Active Users</h5>
+                </div>
+                <div class="productive-contant">
+                    <h1 class="content-title">2M+</h1>
+                    <h5 class="contant-p">Focus Sessions</h5>
+                </div>
+                <div class="productive-contant">
+                    <h1 class="content-title">95%</h1>
+                    <p class="contant-p">Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Users-Feedback-Section -->
+        <section class="Users-Feedback-Section">
+            <h1 class="Users-Feedback-title">What our users say</h1>
+            <div class="Users-Feedback-contenar">
+                <div class="oll-review-contant">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2 class="designers">Loved by Designers</h2>
+                    <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
+                    <div class="review-data">
+                        <img class="review-data-img" src="Assets/avatar.png" alt="">
+                         <div>
+                            <p class="reviewer-name">Reviewer name</p>
+                            <p class="date">Date</p>
+                         </div>
+
+                    </div>
+                </div>
+                 <div class="oll-review-contant">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2 class="designers">Loved by Designers</h2>
+                    <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
+                    <div class="review-data">
+                        <img class="review-data-img" src="Assets/avatar.png" alt="">
+                         <div>
+                            <p class="reviewer-name">Reviewer name</p>
+                            <p class="date">Date</p>
+                         </div>
+
+                    </div>
+                </div>
+                 <div class="oll-review-contant">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2 class="designers">Loved by Designers</h2>
+                    <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
+                    <div class="review-data">
+                        <img class="review-data-img" src="Assets/avatar.png" alt="">
+                         <div>
+                            <p class="reviewer-name">Reviewer name</p>
+                            <p class="date">Date</p>
+                         </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="focus-better-section">
+            <h1 class="focus-better-title">Ready to focus better</h1>
+            <p class="focus-better-p">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn">Get Started Free</button>
+             <div>
+                <img class="wc-big-img" src="Assets/wc-big.png" alt="">
+             </div>
+        </section>
+<!-- Lets-Get-In-Touch-Section -->
+        <section class="Lets-Get-In-Touch-Section">
+            <div>
+                <h1 class="Lets-Get-In-Touch-title">Let’s Get in Touch</h1>
+            </div>
+            <div>
+                <form> 
+                    <label for="">Email</label>
+                    <input placeholder="example@email.com" type="email" name="" id="">
+                    <label for="">Name</label>
+                    <input placeholder="full name" type="text" name="" id="">
+                    <label for="">Message</label>
+                    <textarea placeholder="write your message...." name="" id=""></textarea>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section class="footer-section">
+            <h1>LOGO</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <div>
+                <p><a href="#"></a></p>
+            </div>
+        </section>
+    </footer>
 </body>
+
 </html>
