Add footer update and etc

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="Users-Feedback-Section">
             <h1 class="Users-Feedback-title">What our users say</h1>
             <div class="Users-Feedback-contenar">
-                <div class="oll-review-contant">
+                <div class="oll-contant">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
@@ -83,7 +83,7 @@
 
                     </div>
                 </div>
-                 <div class="oll-review-contant">
+                 <div class="oll-contant">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
@@ -100,7 +100,7 @@
 
                     </div>
                 </div>
-                 <div class="oll-review-contant">
+                 <div class="oll-contant">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
@@ -145,13 +145,17 @@
             </div>
         </section>
     </main>
-
+<!-- footer section -->
     <footer>
         <section class="footer-section">
-            <h1>LOGO</h1>
-            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
-            <div>
-                <p><a href="#"></a></p>
+            <h1 class="footer-logo">LOGO</h1>
+            <p class="footer-p">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="a-tag">
+                <p><a href="#">Home</a></p>
+                <p><a href="#">About</a></p>
+                <p><a href="#">How it Works</a></p>
+                <p><a href="#">Services</a></p>
+                
             </div>
         </section>
     </footer>
