--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <h2 class="header-logo">LOGO</h2>
             <ul>
-                 <li><button class="btn">Sign Up</button></li>
+                <li><button class="btn">Sign Up</button></li>
             </ul>
         </nav>
         <section class="banner-section">
@@ -27,7 +27,9 @@
         </section>
     </header>
     <main>
+
         <!-- action-section -->
+
         <section class="action-section">
             <div class="action-contenar">
                 <div class="action-contant">
@@ -42,10 +44,10 @@
             </div>
         </section>
 
-         <!-- Productive Users Section -->
+        <!-- Productive Users Section -->
+
         <section class="productive_user-section">
             <h1 class="productive-heading">Joined Thousands of Productive Users</h1>
-
             <div class="productive-contenar">
                 <div class="productive-contant">
                     <h1 class="content-title">50K</h1>
@@ -63,6 +65,7 @@
         </section>
 
         <!-- Users-Feedback-Section -->
+
         <section class="Users-Feedback-Section">
             <h1 class="Users-Feedback-title">What our users say</h1>
             <div class="Users-Feedback-contenar">
@@ -76,14 +79,14 @@
                     <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
                     <div class="review-data">
                         <img class="review-data-img" src="Assets/avatar.png" alt="">
-                         <div>
+                        <div>
                             <p class="reviewer-name">Reviewer name</p>
                             <p class="date">Date</p>
-                         </div>
+                        </div>
 
                     </div>
                 </div>
-                 <div class="oll-contant">
+                <div class="oll-contant">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
@@ -93,14 +96,14 @@
                     <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
                     <div class="review-data">
                         <img class="review-data-img" src="Assets/avatar.png" alt="">
-                         <div>
+                        <div>
                             <p class="reviewer-name">Reviewer name</p>
                             <p class="date">Date</p>
-                         </div>
+                        </div>
 
                     </div>
                 </div>
-                 <div class="oll-contant">
+                <div class="oll-contant">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
                     <img src="Assets/icon-star.png" alt="">
@@ -110,52 +113,59 @@
                     <h4 class="studio-vertex">This template instantly leveled up our presence.” – Studio Vertex</h4>
                     <div class="review-data">
                         <img class="review-data-img" src="Assets/avatar.png" alt="">
-                         <div>
+                        <div>
                             <p class="reviewer-name">Reviewer name</p>
                             <p class="date">Date</p>
-                         </div>
+                        </div>
 
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- focus-better-section -->
 
         <section class="focus-better-section">
             <h1 class="focus-better-title">Ready to focus better</h1>
             <p class="focus-better-p">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="btn">Get Started Free</button>
-             <div>
+            <div>
                 <img class="wc-big-img" src="Assets/wc-big.png" alt="">
-             </div>
+            </div>
         </section>
-<!-- Lets-Get-In-Touch-Section -->
+
+        <!-- Lets-Get-In-Touch-Section -->
+
         <section class="Lets-Get-In-Touch-Section">
             <div>
                 <h1 class="Lets-Get-In-Touch-title">Let’s Get in Touch</h1>
             </div>
             <div>
-                <form> 
+                <form>
                     <label for="">Email</label>
                     <input placeholder="example@email.com" type="email" name="" id="">
+
                     <label for="">Name</label>
                     <input placeholder="full name" type="text" name="" id="">
+
                     <label for="">Message</label>
-                    <textarea placeholder="write your message...." name="" id=""></textarea>
+                    <textarea cols="20" rows="6" placeholder="write your message...."   name="" id=""></textarea>
+                    <input type="button" value="Get In Touch">
                 </form>
             </div>
         </section>
     </main>
-<!-- footer section -->
+    <!-- footer section -->
     <footer>
         <section class="footer-section">
             <h1 class="footer-logo">LOGO</h1>
-            <p class="footer-p">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <p class="footer-p">Ready to elevate your online presence? Contact us today to discuss <br> your project and
+                discover how we can bring your vision to life.</p>
             <div class="a-tag">
                 <p><a href="#">Home</a></p>
                 <p><a href="#">About</a></p>
                 <p><a href="#">How it Works</a></p>
                 <p><a href="#">Services</a></p>
-                
             </div>
         </section>
     </footer>
